# Slot-Attention-Mamba

./: .gitignore  =1.2.0  =2.0.0  =2.5.8  CLAUDE.md  README.md  constants.py  evaluate.py  pyproject.toml  requirements.txt  setup.py  train.py  verify_env.py
align_mamba/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
align_mamba/kernels/: __init__.py  loss.py  rmsnorm.py
configs/: ablation_no_householder.yaml  ablation_no_injection.yaml  ablation_no_kronecker.yaml  ablation_no_pdma.yaml  ablation_no_surprise_gate.yaml  capacity_cliff.yaml  fineweb_llama2.yaml  lm_1_3b.yaml  lm_340m.yaml  lm_harness.yaml  main.yaml  mqar_grid.yaml  wikitext103.yaml
configs/data/: mqar.yaml
configs/experiment/: 01_proof_mqar_cliff.yaml  02_mechanism_ablation.yaml  04_d_state_scaling.yaml  05_shared_attention.yaml  06_polarization.yaml  07_kl_guided.yaml  08_state_expansion.yaml  09_based_attention.yaml  10_memmamba.yaml  11_full_ablation.yaml
configs/model/: _defaults.yaml
configs/training/: default.yaml  experiment_fast.yaml
csrc/: bindings.cpp
models/: align_mamba.py  attention.py  base.py  based_attention.py  bimamba.py  checkpoints.py  embeddings.py  encoder_decoder.py  memmamba.py  normalization.py  state_expansion.py  wrapper.py
papers/: 2409.md  2412.md  2501.00658.md  2510.md
scripts/: aggregate_results.py  eval.py  launch.py  train.py
src/: config.py  data.py  evaluation.py  model.py  training.py
tests/: __init__.py  test_sota_features.py
training/: adaptive.py  eval_utils.py  kl_selection.py  objectives.py  trainer.py
(+69 files in other folders)
