[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "align-mamba"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5,<2.7",
    "mamba-ssm>=2.2,<2.4",
    "flash-attn>=2.7,<2.8",
    "triton>=3.1,<3.2",
    "pyyaml>=6.0,<6.1",
    "accelerate>=1.2,<1.3",
    "torchmetrics>=1.2,<1.6",
    "tiktoken>=0.7,<0.9",
    "datasets>=3.0,<4.0",
    "transformers>=4.40,<5.0",
    "lm-eval>=0.4,<0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
