[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "align-mamba"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.6.0",
    "mamba-ssm==2.2.4",
    "flash-attn==2.7.3",
    "triton==3.1.0",
    "pyyaml==6.0.2",
    "accelerate==1.2.1",
    "torchmetrics==1.6.0",
    "datasets==3.2.0",
    "transformers==4.47.0",
    "lm-eval==0.4.6",
]

[tool.setuptools]
py-modules = ["config", "model", "data", "training", "evaluation"]
packages = ["kernels"]

[tool.setuptools.package-dir]
"" = "src"
